[tool.poetry]
name = "aioclamd"
version = "1.0.0"
description = "Asynchronous client for virus scanning with ClamAV"
authors = ["Henrik Blidh <henrik.blidh@swedwise.se>"]
homepage = "https://github.com/swedwise/aioclamd"
repository = "https://github.com/swedwise/aioclamd"
readme = "README.md"
license = "MIT"
packages = [{include = "aioclamd"}]
include = ["README.md", "CHANGELOG.md", "LICENSE"]
keywords = ["clamav", "virus", "scanning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
flake8 = { version = "^5.0.0", python = ">=3.8" }
typing-extensions = { version = "^4.2.0", python = "<3.8" }

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
